--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "debug": "^4.3.4",
     "gh": "^2.8.9",
-    "moment": "^2.29.2",
+    "handlebars": "^4.7.7",
+    "immer": "^9.0.14",
+    "marked": "^4.0.16",
+    "mime": "^3.0.0",
+    "minimist": "^1.2.6",
+    "moment": "^2.29.3",
+    "open": "^8.4.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "^0.9.5",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,6 +48,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^0.1.0"
+    "gh-pages": "^4.0.0"
   }
 }
